--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,25 +10,29 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="用户名：" />
+        android:text="用户名："
+        android:textSize="18dp"/>
 
     <EditText
         android:id="@+id/EditText_username"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:cursorVisible="false"
-        android:gravity="right" />
+        android:cursorVisible="true"
+        android:gravity="right"
+
+        />
 
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="密码：" />
+        android:text="密码："
+        android:textSize="18dp"/>
 
     <EditText
         android:id="@+id/EditText_password"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:cursorVisible="false"
+        android:cursorVisible="true"
         android:inputType="numberPassword"
         android:gravity="right" />
 
@@ -36,7 +40,9 @@
         android:id="@+id/button_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="添加" />
+        android:text="添加"
+        android:textSize="18dp"
+        />
 
 
 </LinearLayout>
