--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -19,8 +19,9 @@ android:orientation="vertical">
      android:id="@+id/EditText_browser"
      android:layout_height="wrap_content"
      android:layout_width="match_parent"
-     android:cursorVisible="false"
-     android:gravity="right" />
+     android:cursorVisible="true"
+     android:gravity="right"
+     android:text=""/>
 
  <Button
      android:id="@+id/Button_visit"
